Case 9000886: Added correct spacing on opened dropdown within dropdown.
When hamburger menu clicked and drop down menu opens, this styles the dropdown items within this (i.e.'Insurance').

--- a/_assets/stylesheets/nav4.scss
+++ b/_assets/stylesheets/nav4.scss
@@ -250,6 +250,9 @@
 				border: 0;
 				-webkit-box-shadow: none;
 				box-shadow: none;
+				> li > a {
+					line-height: 28px;
+				}
 			}
 			.open .dropdown-menu, .dropdown-header {
 				>li > a {
